<resources>
    <string name="app_name">Miiverse Plaza</string>
    <string name="subtitle">Een StreetPass-achtige plaza game voor Android en modded consoles.</string>
    <string name="game_header">Plaza avontuur</string>
    <string name="game_mission">Actieve missie</string>
    <string name="game_score">Plaza-punten</string>
    <string name="hub_summary">Telefoonhub</string>
    <string name="default_mission">Vind spelers op je netwerk en verzamel plaza-punten.</string>
    <string name="mission_progress_template">Nieuwe ontmoeting met %1$s. Zoek nog meer spelers.</string>
    <string name="score_template">%1$d punten</string>
    <string name="hub_summary_template">%1$d StreetPasses klaar voor %2$s</string>
    <string name="profile_header">Jouw plaza-profiel</string>
    <string name="nickname_hint">Nickname</string>
    <string name="game_hint">Favoriete game</string>
    <string name="status_hint">Statusbericht</string>
    <string name="platform_label">Platform</string>
    <string name="save_profile">Profiel opslaan</string>
    <string name="discovery_header">Game discovery</string>
    <string name="discovery_status">Status</string>
    <string name="endpoint_label">UDP endpoint</string>
    <string name="start_discovery">Start discovery</string>
    <string name="stop_discovery">Stop discovery</string>
    <string name="mock_encounter">Voeg test-StreetPass toe</string>
    <string name="system_sync_header">Game sync</string>
    <string name="system_sync_targets">Doelapparaten</string>
    <string name="system_sync_preview">Preview van het sync-pakket</string>
    <string name="target_host_hint">Doel-IP of broadcast, bv. 192.168.0.45 of 255.255.255.255</string>
    <string name="send_system_sync">Verstuur system sync</string>
    <string name="encounters_header">Recente encounters</string>
    <string name="discovery_started">Discovery gestart.</string>
    <string name="discovery_paused">Discovery gestopt.</string>
    <string name="profile_saved">Profiel opgeslagen.</string>
    <string name="mock_encounter_added">Test-StreetPass toegevoegd aan de telefoonhub.</string>
    <string name="sync_sent">Sync verzonden naar %1$s:%2$d</string>
    <string name="sync_failed">Sync mislukt naar %1$s:%2$d</string>
    <string name="discovery_running">Zoekt nu naar plaza-beacons</string>
    <string name="discovery_stopped">Niet actief</string>
    <string name="endpoint_template">Luistert en broadcast op UDP poort %1$d</string>
    <string name="encounter_template">%1$s op %2$s speelt %3$s via %4$s om %5$s</string>
</resources>
